--- a/gradle/gradle-mvn-push.gradle
+++ b/gradle/gradle-mvn-push.gradle
@@ -93,7 +93,8 @@ afterEvaluate { project ->
   }
 
   task androidJavadocs(type: Javadoc) {
-    source = android.sourceSets.main.java
+    source = android.sourceSets.main.java.srcDirs
+    options.addStringOption('Xdoclint:none', '-quiet')
     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
   }
 
@@ -104,7 +105,7 @@ afterEvaluate { project ->
 
   task androidSourcesJar(type: Jar) {
     classifier = 'sources'
-    from android.sourceSets.main.java
+    from android.sourceSets.main.java.sourceFiles
   }
 
   artifacts {
