--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 
 GROUP=com.segment.analytics.android
 
-VERSION_CODE=201
-VERSION_NAME=2.0.1
+VERSION_CODE=202
+VERSION_NAME=2.0.2-SNAPSHOT
 
 POM_NAME=Segment.io for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
