Swich from fest-android to assertj-android

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -18,7 +18,7 @@ dependencies {
   provided rootProject.ext.libraries.tapstream
 
   androidTestCompile 'junit:junit:4.11'
-  androidTestCompile 'com.squareup:fest-android:1.0.8'
+  androidTestCompile 'com.squareup.assertj:assertj-android:1.0.0'
   androidTestCompile 'org.mockito:mockito-all:1.9.5'
   androidTestCompile 'org.robolectric:robolectric:2.3'
 }
