--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 
 GROUP=com.segment.analytics.android
 
-VERSION_CODE=204
-VERSION_NAME=2.0.4
+VERSION_CODE=205
+VERSION_NAME=2.0.5-SNAPSHOT
 
 POM_NAME=Segment.io for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
