Update Company Name

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,4 +18,4 @@ POM_LICENCE_URL=http://opensource.org/licenses/MIT
 POM_LICENCE_DIST=repo
 
 POM_DEVELOPER_ID=segmentio
-POM_DEVELOPER_NAME=Segment.io, Inc.
+POM_DEVELOPER_NAME=Segment, Inc.
