--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 
 GROUP=com.segment.analytics.android
 
-VERSION_CODE=205
-VERSION_NAME=2.0.5-SNAPSHOT
+VERSION_CODE=210
+VERSION_NAME=2.1.0
 
 POM_NAME=Segment.io for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
