update company name

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ GROUP=com.segment.analytics.android
 VERSION_CODE=214
 VERSION_NAME=2.1.4-SNAPSHOT
 
-POM_NAME=Segment.io for Android
+POM_NAME=Segmentg for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
 
 POM_URL=http://github.com/segmentio/analytics-android
