prepare for release

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@
 GROUP=com.segment.analytics.android
 
 VERSION_CODE=214
-VERSION_NAME=2.1.4-SNAPSHOT
+VERSION_NAME=2.1.4
 
-POM_NAME=Segmentg for Android
+POM_NAME=Segment for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
 
 POM_URL=http://github.com/segmentio/analytics-android
