prepare for next development iteration

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 
 GROUP=com.segment.analytics.android
 
-VERSION_CODE=216
-VERSION_NAME=2.1.6
+VERSION_CODE=217
+VERSION_NAME=2.1.7-SNAPSHOT
 
 POM_NAME=Segment for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
