--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,9 @@ subprojects {
       mavenCentral()
     }
     dependencies {
-      classpath 'com.android.tools.build:gradle:0.12.+'
-      classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.+'
-      classpath 'org.robolectric:robolectric-gradle-plugin:0.12.+'
+      classpath 'com.android.tools.build:gradle:0.13.3'
+      classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0'
+      classpath 'org.robolectric:robolectric-gradle-plugin:0.13.2'
     }
   }
 
