--- a/build.gradle
+++ b/build.gradle
@@ -42,11 +42,11 @@ ext.libraries = [amplitude      : 'com.amplitude:android-sdk:1.4.1',
                  countly        : 'ly.count:sdk-android:13.11',
                  crittercism    : 'com.crittercism:crittercism-android-agent:4.5.3',
                  flurry         : files('libs/FlurryAnalytics-4.1.0.jar'),
-                 supportLib     : 'com.android.support:support-v4:19.1.0',
-                 googleAnalytics: 'com.google.android.gms:play-services:5.0.89',
+                 supportLib     : 'com.android.support:support-v4:20.0.0',
+                 googleAnalytics: 'com.google.android.gms:play-services:6.1.11',
                  localytics     : project(':localytics'),
                  mixpanel       : 'com.mixpanel.android:mixpanel-android:4.2.1@aar',
                  quantcast      : files('libs/QuantcastAndroidSdk.jar'),
                  tapstream      : files('libs/Tapstream-2.7.1.jar'),
-                 supportWearable: 'com.google.android.support:wearable:+',
-                 playWearable   : 'com.google.android.gms:play-services-wearable:+']
+                 supportWearable: 'com.google.android.support:wearable:1.0.0',
+                 playWearable   : 'com.google.android.gms:play-services-wearable:6.1.11']
