--- a/sample-app/gradle.properties
+++ b/sample-app/gradle.properties
@@ -1,3 +1,3 @@
-POM_NAME=Segment.io Android Analytics Sample App
+POM_NAME=Segment Android Analytics Sample App
 POM_ARTIFACT_ID=analytics-android-sample-app
 POM_PACKAGING=apk
