--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ ext.libraries = [amplitude      : 'com.amplitude:android-sdk:1.4.1',
                  supportLib     : 'com.android.support:support-v4:20.0.0',
                  googleAnalytics: 'com.google.android.gms:play-services:6.1.11',
                  localytics     : project(':localytics'),
+                 leanplum       : files('libs/Leanplum.jar'),
                  mixpanel       : 'com.mixpanel.android:mixpanel-android:4.2.1@aar',
                  quantcast      : files('libs/QuantcastAndroidSdk.jar'),
                  tapstream      : files('libs/Tapstream-2.7.1.jar'),
