--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 GROUP=com.segment.analytics.android
 
 VERSION_CODE=2110
-VERSION_NAME=2.1.10-SNAPSHOT
+VERSION_NAME=2.1.10
 
 POM_NAME=Segment for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
