--- a/core/build.gradle
+++ b/core/build.gradle
@@ -60,7 +60,9 @@ android {
 }
 
 robolectric {
-  jvmArgs '-noverify' // https://github.com/robolectric/robolectric/issues/1186
+  // https://github.com/robolectric/robolectric/issues/1186
+  // https://code.google.com/p/android/issues/detail?id=75080
+  jvmArgs '-noverify'
 }
 
 apply from: rootProject.file('gradle/checkstyle-library.gradle')
