--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include 'localytics', 'core', 'wear', 'all', 'sample-app', 'wear-sample'
+include 'core', 'wear', 'all', 'sample-app', 'wear-sample'
