--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ ext.libraries = [
     flurry         : files('libs/FlurryAnalytics-4.1.0.jar'),
     supportLib     : 'com.android.support:support-v4:20.0.0',
     googleAnalytics: 'com.google.android.gms:play-services:6.1.11',
-    localytics     : project(':localytics'),
+    localytics     : files('libs/localytics.jar'),
     leanplum       : files('libs/Leanplum.jar'),
     mixpanel       : 'com.mixpanel.android:mixpanel-android:4.2.1@aar',
     quantcast      : files('libs/QuantcastAndroidSdk.jar'),
