--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 
 GROUP=com.segment.analytics.android
 
-VERSION_CODE=2111
-VERSION_NAME=2.1.11-SNAPSHOT
+VERSION_CODE=220
+VERSION_NAME=2.2.0
 
 POM_NAME=Segment for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
