--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 
 GROUP=com.segment.analytics.android
 
-VERSION_CODE=220
-VERSION_NAME=2.2.0
+VERSION_CODE=221
+VERSION_NAME=2.2.1-SNAPSHOT
 
 POM_NAME=Segment for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
