--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'robolectric'
 
 dependencies {
+  compile 'com.squareup:tape:1.2.3'
   // Integrations
   provided rootProject.ext.libraries.amplitude
   provided rootProject.ext.libraries.appsFlyer
