--- a/build.gradle
+++ b/build.gradle
@@ -39,17 +39,17 @@ ext {
 // @formatter:off
 ext.libraries = [
     amplitude      : 'com.amplitude:android-sdk:1.4.1',
-    appsFlyer      : files('libs/AF-Android-SDK-v2.3.1.12.jar'),
+    appsFlyer      : files('libs/AppsFlyer-2.3.1.12.jar'),
     bugsnag        : 'com.bugsnag:bugsnag-android:2.2.0',
     countly        : 'ly.count:sdk-android:13.11',
     crittercism    : 'com.crittercism:crittercism-android-agent:4.5.3',
-    flurry         : files('libs/FlurryAnalytics-4.1.0.jar'),
+    flurry         : files('libs/Flurry-4.1.0.jar'),
     supportLib     : 'com.android.support:support-v4:20.0.0',
     googleAnalytics: 'com.google.android.gms:play-services:6.1.11',
-    localytics     : files('libs/localytics.jar'),
-    leanplum       : files('libs/Leanplum.jar'),
+    localytics     : files('libs/Localytics-2.7.1.jar'),
+    leanplum       : files('libs/Leanplum-1.2.5.jar'),
     mixpanel       : 'com.mixpanel.android:mixpanel-android:4.4.0@aar',
-    quantcast      : files('libs/QuantcastAndroidSdk.jar'),
+    quantcast      : files('libs/Quantcast-1.2.3.jar'),
     tapstream      : files('libs/Tapstream-2.7.1.jar'),
     supportWearable: 'com.google.android.support:wearable:1.0.0',
     playWearable   : 'com.google.android.gms:play-services-wearable:6.1.11'
