--- a/core/build.gradle
+++ b/core/build.gradle
@@ -15,6 +15,7 @@ dependencies {
   // installs googleAnalytics dependencies
   provided rootProject.ext.libraries.supportLib
   provided rootProject.ext.libraries.googleAnalytics
+  provided rootProject.ext.libraries.kahuna
   provided rootProject.ext.libraries.localytics
   provided rootProject.ext.libraries.leanplum
   provided rootProject.ext.libraries.mixpanel
