--- a/all/build.gradle
+++ b/all/build.gradle
@@ -10,6 +10,7 @@ dependencies {
   compile rootProject.ext.libraries.crittercism
   compile rootProject.ext.libraries.flurry
   compile rootProject.ext.libraries.googleAnalytics
+  compile rootProject.ext.libraries.kahuna
   compile rootProject.ext.libraries.localytics
   compile rootProject.ext.libraries.leanplum
   compile rootProject.ext.libraries.mixpanel
