--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,8 @@ jdk:
 
 notifications:
   email: false
-  hipchat:
-    rooms:
-      secure: CO1rkQMD/T5fpAozqneRg6SqVIMrgi659A5hGUA9pdwFXDv9y4MZTjTE9cws30po1v74k9EtrNSGwAMnZoKao6lorQBL2d1S+HQKkFQIrwNJ1wLrgFz8KBDziv35Bt3+8yYHxPGtu0iLgK+xHvSx2WWs+MtoH9Xdj37QfJi56+o=
+  slack:
+    secure: CwD2A4aKRQfTkPnAixS1LE7lk5ZrwDKiKQfGAyo23mpX8Ql5oy4nosiqXKaeHxcL8tQduBFlfCC7+mGQ9HIWot0S2fTIk6K0pJ5NGD9gXGXw/5qh5WVCtbQrlDQ4TTsUGpdXKummIAeWHeE3LN8MHW6X7eNjLVyu8BdOOFhdQVE=
 
 branches:
   except:
