--- a/core/build.gradle
+++ b/core/build.gradle
@@ -35,6 +35,7 @@ dependencies {
   androidTestCompile 'org.powermock:powermock-module-junit4-rule:1.5.6'
   androidTestCompile 'org.powermock:powermock-api-mockito:1.5.6'
   androidTestCompile 'org.powermock:powermock-classloading-xstream:1.5.6'
+  androidTestCompile 'org.skyscreamer:jsonassert:1.2.3'
 }
 
 android {
