--- a/wear-sample/build.gradle
+++ b/wear-sample/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 
 dependencies {
   // repositories { maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' } }
-  // compile('io.segment.analytics.android:all:1.3.11-SNAPSHOT@aar') {
+  // compile('com.segment.analytics.android:all:2.4.4-SNAPSHOT@aar') {
   //   transitive = true
   // }
   compile project(':wear')
