--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -34,7 +34,8 @@ apply from: rootProject.file('gradle/checkstyle-library.gradle')
 apply from: rootProject.file('gradle/attach-lean-jar.gradle')
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
 
-// todo: move this to the build script
+// todo: move this to the gradle-mvn-push script
 afterEvaluate {
-  androidJavadocs.classpath += project.android.libraryVariants.toList().first().javaCompile.classpath
+  androidJavadocs.classpath +=
+      project.android.libraryVariants.toList().first().javaCompile.classpath
 }
