--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,6 @@ before_install:
   - export TERM=dumb
   - sudo apt-get update
   - sudo apt-get install -qq libstdc++6:i386 lib32z1
+
+script:
+  - ./gradlew check --info
