--- a/build.gradle
+++ b/build.gradle
@@ -44,22 +44,28 @@ ext {
   preDexLibraries = preDexEnabled && !isTravis
 }
 // @formatter:off
-ext.libraries = [
+ext.integrationsMap = [
     amplitude      : 'com.amplitude:android-sdk:1.4.1',
     appsFlyer      : files('libs/AppsFlyer-2.3.1.12.jar'),
     bugsnag        : 'com.bugsnag:bugsnag-android:2.2.0',
     countly        : 'ly.count:sdk-android:13.11',
     crittercism    : 'com.crittercism:crittercism-android-agent:5.0.3',
     flurry         : files('libs/Flurry-4.1.0.jar'),
-    supportLib     : 'com.android.support:support-v4:21.0.2',
     googleAnalytics: 'com.google.android.gms:play-services:6.1.71',
     kahuna         : files('libs/Kahuna-5.1.0.jar'),
     localytics     : files('libs/Localytics-2.7.1.jar'),
     leanplum       : files('libs/Leanplum-1.2.5.jar'),
     mixpanel       : 'com.mixpanel.android:mixpanel-android:4.4.0@aar',
     quantcast      : 'com.quantcast.android.measurement:QuantcastAndroidSdk:1.2.3',
-    tapstream      : files('libs/Tapstream-2.7.1.jar'),
+    tapstream      : files('libs/Tapstream-2.7.1.jar')
+]
+
+ext.integrations = ext.integrationsMap.values()
+
+ext.libraries = [
+    playWearable   : 'com.google.android.gms:play-services-wearable:6.1.71',
+    supportLib     : 'com.android.support:support-v4:21.0.2',
     supportWearable: 'com.google.android.support:wearable:1.0.0',
-    playWearable   : 'com.google.android.gms:play-services-wearable:6.1.71'
+    tape           : 'com.squareup:tape:1.2.3'
 ]
 // @formatter:on
