--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,24 +3,9 @@ apply plugin: 'com.android.library'
 apply plugin: 'robolectric'
 
 dependencies {
-  compile 'com.squareup:tape:1.2.3'
-  // Integrations
-  provided rootProject.ext.libraries.amplitude
-  provided rootProject.ext.libraries.appsFlyer
-  provided rootProject.ext.libraries.bugsnag
-  provided rootProject.ext.libraries.countly
-  provided rootProject.ext.libraries.crittercism
-  provided rootProject.ext.libraries.flurry
-  // workaround for https://github.com/JakeWharton/sdk-manager-plugin/issues/14 to make sure travis
-  // installs googleAnalytics dependencies
+  compile rootProject.ext.libraries.tape
   provided rootProject.ext.libraries.supportLib
-  provided rootProject.ext.libraries.googleAnalytics
-  provided rootProject.ext.libraries.kahuna
-  provided rootProject.ext.libraries.localytics
-  provided rootProject.ext.libraries.leanplum
-  provided rootProject.ext.libraries.mixpanel
-  provided rootProject.ext.libraries.quantcast
-  provided rootProject.ext.libraries.tapstream
+  provided rootProject.ext.integrations
 
   androidTestCompile 'junit:junit:4.11'
   androidTestCompile 'com.squareup.assertj:assertj-android:1.0.0'
@@ -73,7 +58,8 @@ apply from: rootProject.file('gradle/checkstyle-library.gradle')
 apply from: rootProject.file('gradle/attach-lean-jar.gradle')
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
 
-// todo: move this to the build script
+// todo: move this to the gradle-mvn-push script
 afterEvaluate {
-  androidJavadocs.classpath += project.android.libraryVariants.toList().first().javaCompile.classpath
+  androidJavadocs.classpath +=
+      project.android.libraryVariants.toList().first().javaCompile.classpath
 }
