Suppress Build Matrix for now

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: android
 
 jdk:
   - oraclejdk8
-  - oraclejdk7
-  - openjdk7
+  #  - oraclejdk7
+  #  - openjdk7
 
 notifications:
   email: false
