[gradle-release-task] prepare release 2.4.5

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 GROUP=com.segment.analytics.android
 
 VERSION_CODE=245
-VERSION_NAME=2.4.5-SNAPSHOT
+VERSION_NAME=2.4.5
 
 POM_NAME=Segment for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
