--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 
 GROUP=com.segment.analytics.android
 
-VERSION_CODE=245
-VERSION_NAME=2.4.5
+VERSION_CODE=246
+VERSION_NAME=2.4.6-SNAPSHOT
 
 POM_NAME=Segment for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
