--- a/all/gradle.properties
+++ b/all/gradle.properties
@@ -1,3 +1,3 @@
-POM_NAME=Segment.io Android Analytics - All Integrations
+POM_NAME=Segment Android Analytics - All Integrations
 POM_ARTIFACT_ID=all
 POM_PACKAGING=aar
