--- a/wear-sample/gradle.properties
+++ b/wear-sample/gradle.properties
@@ -1,3 +1,3 @@
-POM_NAME=Segment.io Android Wear Analytics Sample App
+POM_NAME=Segment Android Wear Analytics Sample App
 POM_ARTIFACT_ID=analytics-android-wear-sample-app
 POM_PACKAGING=apk
