--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ ext.integrationsMap = [
     localytics     : files('libs/Localytics-2.7.1.jar'),
     leanplum       : files('libs/Leanplum-1.2.5.jar'),
     mixpanel       : 'com.mixpanel.android:mixpanel-android:4.5.1@aar',
-    quantcast      : 'com.quantcast.android.measurement:QuantcastAndroidSdk:1.2.5',
+    quantcast      : files('libs/Quantcast-1.2.5.jar'),
     tapstream      : files('libs/Tapstream-2.7.1.jar')
 ]
 
