--- a/analytics-core/build.gradle
+++ b/analytics-core/build.gradle
@@ -9,8 +9,8 @@ buildscript {
 }
 
 dependencies {
-  compile project(':analytics')
-  compile rootProject.ext.integrations
+  provided rootProject.ext.libraries.supportLib
+  provided rootProject.ext.integrations
 }
 
 android {
@@ -34,8 +34,15 @@ android {
 
   packagingOptions {
     exclude 'LICENSE.txt'
-    exclude 'AndroidManifest.xml'
   }
 }
 
+apply from: rootProject.file('gradle/checkstyle-library.gradle')
+apply from: rootProject.file('gradle/attach-lean-jar.gradle')
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
+
+// todo: move this to the gradle-mvn-push script
+afterEvaluate {
+  androidJavadocs.classpath +=
+      project.android.libraryVariants.toList().first().javaCompile.classpath
+}
