--- a/analytics/build.gradle
+++ b/analytics/build.gradle
@@ -9,8 +9,8 @@ buildscript {
 }
 
 dependencies {
-  provided rootProject.ext.libraries.supportLib
-  provided rootProject.ext.integrations
+  compile project(':analytics-core')
+  compile rootProject.ext.integrations
 }
 
 android {
@@ -34,15 +34,8 @@ android {
 
   packagingOptions {
     exclude 'LICENSE.txt'
+    exclude 'AndroidManifest.xml'
   }
 }
 
-apply from: rootProject.file('gradle/checkstyle-library.gradle')
-apply from: rootProject.file('gradle/attach-lean-jar.gradle')
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
-
-// todo: move this to the gradle-mvn-push script
-afterEvaluate {
-  androidJavadocs.classpath +=
-      project.android.libraryVariants.toList().first().javaCompile.classpath
-}
