--- a/analytics/gradle.properties
+++ b/analytics/gradle.properties
@@ -1,3 +1,3 @@
-POM_NAME=Segment Android Analytics
-POM_ARTIFACT_ID=analytics
-POM_PACKAGING=jar
+POM_NAME=Segment Android Analytics - All Integrations
+POM_ARTIFACT_ID=analytics-all
+POM_PACKAGING=aar
