--- a/analytics-core/build.gradle
+++ b/analytics-core/build.gradle
@@ -5,12 +5,8 @@ buildscript {
   dependencies {
     classpath rootProject.ext.plugins.android
     classpath rootProject.ext.plugins.sdkManager
+    classpath rootProject.ext.plugins.androidUnitTest
   }
-}
-
-dependencies {
-  provided rootProject.ext.libraries.supportLib
-  provided rootProject.ext.integrations
 }
 
 android {
@@ -35,6 +31,32 @@ android {
   packagingOptions {
     exclude 'LICENSE.txt'
   }
+}
+
+apply plugin: 'android-unit-test'
+
+androidUnitTest {
+  testTasks {
+    all {
+      jvmArgs '-noverify'
+    }
+  }
+}
+
+dependencies {
+  provided rootProject.ext.libraries.supportLib
+  provided rootProject.ext.integrations
+
+  testCompile 'junit:junit:4.11'
+  testCompile 'org.robolectric:robolectric:2.3'
+  testCompile 'org.mockito:mockito-core:1.10.8'
+  testCompile 'org.assertj:assertj-core:1.7.0'
+
+  testCompile 'org.powermock:powermock:1.5.6'
+  testCompile 'org.powermock:powermock-module-junit4:1.5.6'
+  testCompile 'org.powermock:powermock-module-junit4-rule:1.5.6'
+  testCompile 'org.powermock:powermock-api-mockito:1.5.6'
+  testCompile 'org.powermock:powermock-classloading-xstream:1.5.6'
 }
 
 apply from: rootProject.file('gradle/checkstyle-library.gradle')
