--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,9 @@ ext {
 
 ext.plugins = [
     android        : 'com.android.tools.build:gradle:1.0.0',
-    sdkManager     : 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0'
+    sdkManager     : 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0',
+    androidUnitTest: 'com.github.jcandksolutions.gradle:android-unit-test:2.1.1'
+
 ]
 
 ext.integrationsMap = [
