--- a/analytics-integration-amplitude/build.gradle
+++ b/analytics-integration-amplitude/build.gradle
@@ -44,10 +44,12 @@ androidUnitTest {
 }
 
 dependencies {
-  provided rootProject.ext.libraries.supportLib
-  provided rootProject.ext.integrations
+  provided project(':analytics-core')
+  compile 'com.amplitude:android-sdk:1.4.3'
 
   testCompile rootProject.ext.testLibraries
+  // todo: lookup locations from plugin API
+  testCompile files('../analytics-core/build/test-classes/debug')
 }
 
 apply from: rootProject.file('gradle/checkstyle-library.gradle')
