--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,6 @@ ext.plugins = [
     android        : 'com.android.tools.build:gradle:1.0.0',
     sdkManager     : 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0',
     androidUnitTest: 'com.github.jcandksolutions.gradle:android-unit-test:2.1.1'
-
 ]
 
 ext.integrationsMap = [
@@ -68,4 +67,16 @@ ext.libraries = [
     playWearable   : 'com.google.android.gms:play-services-wearable:6.5.87',
     supportLib     : 'com.android.support:support-v4:21.0.2',
     supportWearable: 'com.google.android.support:wearable:1.0.0'
+]
+
+ext.testLibraries = [
+    'junit:junit:4.11',
+    'org.robolectric:robolectric:2.3',
+    'org.mockito:mockito-core:1.10.8',
+    'org.assertj:assertj-core:1.7.0',
+    'org.powermock:powermock:1.5.6',
+    'org.powermock:powermock-module-junit4:1.5.6',
+    'org.powermock:powermock-module-junit4-rule:1.5.6',
+    'org.powermock:powermock-api-mockito:1.5.6',
+    'org.powermock:powermock-classloading-xstream:1.5.6'
 ]
