--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 include 'analytics-core'
+include 'analytics-integration-amplitude'
 include 'analytics-wear'
 include 'analytics'
 include 'analytics-sample'
