--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ include 'analytics-core'
 include 'analytics-integration-amplitude'
 include 'analytics-integration-appsflyer'
 include 'analytics-integration-bugsnag'
+include 'analytics-integration-countly'
 include 'analytics-wear'
 include 'analytics'
 include 'analytics-sample'
