Move Crittercism into its own module

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ include 'analytics-integration-amplitude'
 include 'analytics-integration-appsflyer'
 include 'analytics-integration-bugsnag'
 include 'analytics-integration-countly'
+include 'analytics-integration-crittercism'
 include 'analytics-wear'
 include 'analytics'
 include 'analytics-sample'
