Move Flurry into its own module

--- a/analytics-integration-flurry/src/main/AndroidManifest.xml
+++ b/analytics-integration-flurry/src/main/AndroidManifest.xml
@@ -23,6 +23,6 @@
   ~ SOFTWARE.
   -->
 
-<manifest package="com.segment.analytics.crittercism">
+<manifest package="com.segment.analytics.flurry">
   <application/>
 </manifest>
