--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include 'analytics-integration-appsflyer'
 include 'analytics-integration-bugsnag'
 include 'analytics-integration-countly'
 include 'analytics-integration-crittercism'
+include 'analytics-integration-flurry'
 include 'analytics-wear'
 include 'analytics'
 include 'analytics-sample'
