Move Google Analytics into its own module. Update arifact IDs for Integrations

--- a/analytics-core/build.gradle
+++ b/analytics-core/build.gradle
@@ -45,6 +45,7 @@ androidUnitTest {
 
 dependencies {
   provided rootProject.ext.libraries.supportLib
+  provided rootProject.ext.libraries.googleAnalytics
   provided rootProject.ext.integrations
 
   testCompile rootProject.ext.testLibraries
