--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ include 'analytics-integration-bugsnag'
 include 'analytics-integration-countly'
 include 'analytics-integration-crittercism'
 include 'analytics-integration-flurry'
+include 'analytics-integration-google-analytics'
 include 'analytics-wear'
 include 'analytics'
 include 'analytics-sample'
