Move Kahuna into its own module

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,7 @@ include 'analytics-integration-countly'
 include 'analytics-integration-crittercism'
 include 'analytics-integration-flurry'
 include 'analytics-integration-google-analytics'
+include 'analytics-integration-kahuna'
 include 'analytics-wear'
 include 'analytics'
 include 'analytics-sample'
