--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@ include 'analytics-integration-crittercism'
 include 'analytics-integration-flurry'
 include 'analytics-integration-google-analytics'
 include 'analytics-integration-kahuna'
+include 'analytics-integration-localytics'
 include 'analytics-wear'
 include 'analytics'
 include 'analytics-sample'
