Change generated package for analytics modules

--- a/analytics-core/src/main/AndroidManifest.xml
+++ b/analytics-core/src/main/AndroidManifest.xml
@@ -24,10 +24,8 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.segment.analytics">
-
+    package="com.segment.analytics.core">
   <!-- Required for internet. -->
   <uses-permission android:name="android.permission.INTERNET"/>
-
   <application/>
 </manifest>
