--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,7 @@ include 'analytics-integration-flurry'
 include 'analytics-integration-google-analytics'
 include 'analytics-integration-kahuna'
 include 'analytics-integration-localytics'
+include 'analytics-integration-leanplum'
 include 'analytics-wear'
 include 'analytics'
 include 'analytics-sample'
