Move Mixpanel to its own module

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,7 @@ include 'analytics-integration-google-analytics'
 include 'analytics-integration-kahuna'
 include 'analytics-integration-localytics'
 include 'analytics-integration-leanplum'
+include 'analytics-integration-mixpanel'
 include 'analytics-wear'
 include 'analytics'
 include 'analytics-sample'
