Move Quantcast into its own module

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,7 @@ include 'analytics-integration-kahuna'
 include 'analytics-integration-localytics'
 include 'analytics-integration-leanplum'
 include 'analytics-integration-mixpanel'
+include 'analytics-integration-quantcast'
 include 'analytics-wear'
 include 'analytics'
 include 'analytics-sample'
