--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,7 @@ include 'analytics-integration-localytics'
 include 'analytics-integration-leanplum'
 include 'analytics-integration-mixpanel'
 include 'analytics-integration-quantcast'
+include 'analytics-integration-tapstream'
 include 'analytics-wear'
 include 'analytics'
 include 'analytics-sample'
