--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 GROUP=com.segment.analytics.android
 
 VERSION_CODE=251
-VERSION_NAME=2.5.1-SNAPSHOT
+VERSION_NAME=2.5.1
 
 POM_NAME=Segment for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
