--- a/settings.gradle
+++ b/settings.gradle
@@ -1,17 +1,17 @@
 include 'analytics-core'
-include 'analytics-integration-amplitude'
-include 'analytics-integration-appsflyer'
-include 'analytics-integration-bugsnag'
-include 'analytics-integration-countly'
-include 'analytics-integration-crittercism'
-include 'analytics-integration-flurry'
-include 'analytics-integration-google-analytics'
-include 'analytics-integration-kahuna'
-include 'analytics-integration-localytics'
-include 'analytics-integration-leanplum'
-include 'analytics-integration-mixpanel'
-include 'analytics-integration-quantcast'
-include 'analytics-integration-tapstream'
+include 'analytics-integrations:analytics-integration-amplitude'
+include 'analytics-integrations:analytics-integration-appsflyer'
+include 'analytics-integrations:analytics-integration-bugsnag'
+include 'analytics-integrations:analytics-integration-countly'
+include 'analytics-integrations:analytics-integration-crittercism'
+include 'analytics-integrations:analytics-integration-flurry'
+include 'analytics-integrations:analytics-integration-google-analytics'
+include 'analytics-integrations:analytics-integration-kahuna'
+include 'analytics-integrations:analytics-integration-localytics'
+include 'analytics-integrations:analytics-integration-leanplum'
+include 'analytics-integrations:analytics-integration-mixpanel'
+include 'analytics-integrations:analytics-integration-quantcast'
+include 'analytics-integrations:analytics-integration-tapstream'
 include 'analytics-wear'
 include 'analytics'
 include 'analytics-sample'
