--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,11 @@
-// Top-level build file; configuration options common to all sub-projects/modules.
-apply plugin: 'idea'
-
 allprojects {
   buildscript {
     repositories {
       mavenCentral()
     }
   }
+
+  apply plugin: 'idea'
 
   repositories {
     mavenCentral()
@@ -20,7 +19,6 @@ subprojects {
   project.plugins.whenPluginAdded { plugin ->
     if ("com.android.build.gradle.LibraryPlugin".equals(plugin.class.name) ||
         "com.android.build.gradle.AppPlugin".equals(plugin.class.name)) {
-      
       android {
         compileSdkVersion rootProject.ext.compileSdkVersion
         buildToolsVersion rootProject.ext.buildToolsVersion
@@ -44,14 +42,13 @@ subprojects {
           exclude 'LICENSE.txt'
         }
       }
-
     }
   }
 }
 
 
 def isTravis = "true".equals(System.getenv("TRAVIS"))
-def preDexEnabled = "true".equals(System.getProperty("pre-dex", "true"))
+def preDexEnabled = "true".equals(System.getProperty("preDex", "true"))
 
 ext {
   versionCode = Integer.parseInt(VERSION_CODE)
